--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "canvas-watermark",
+  "name": "canvaswatermark",
   "version": "1.0.0",
   "description": "通用水印组件-hyt-1693657423@qq.com",
   "main": "./dist/watermark.js",
